<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="my_representatives">My Representatives</string>
    <string name="search_to_find_representatives">Search to find representatives</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="election_information">Election Information</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="political_prep">Political Preparedness</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_name">Election Name</string>
    <string name="follow_election">Follow Election</string>
    <string name="profileImage">profileImage</string>
    <string name="wwwImage">wwwImage</string>
    <string name="facebookIcon">facebookIcon</string>
    <string name="twitterIcon">twitterIcon</string>
</resources>
