<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="address"
            type="com.example.android.politicalpreparedness.network.models.Address" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/search_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            android:text="@{address.line1}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            android:text="@{address.line2}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_line_1" />


        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@{address.city}"
            app:layout_constraintEnd_toStartOf="@+id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:hint="@string/state"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@+id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/city"
            app:stateValue="@{address.state}" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@{address.zip}"
            app:layout_constraintEnd_toEndOf="@+id/city"
            app:layout_constraintStart_toStartOf="@+id/city"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <Button
            android:id="@+id/button_search"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:text="@string/find_my_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zip" />

        <Button
            android:id="@+id/button_location"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_search" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>